Simplify share dialog CSS
Rather than absolute positions and padding and whatnot just set
the width on the input element and set white-space: nowrap to ensure
it and the icon are side-by-side.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -136,18 +136,15 @@ privacy {
 
 .share-dialog {
   position: absolute;
-  right: 100%;
+  right: 0;
   bottom: 100%;
-  width: 240px;
-  margin-right: -46px;
-  margin-bottom: 2px;
-  padding: 3px 5px 3px 23px;
+  padding: 3px;
   z-index: 1;
   display: block;
-  line-height: 1.4;
-  background: #fff;
-  border: 1px solid #d3d3d3;
+  background: $white;
+  border: 1px solid $gray-lighter;
   border-radius: 2px;
+  white-space: nowrap;
 
   &:after, &:before {
     top: 100%;
@@ -174,19 +171,9 @@ privacy {
     margin-right: -6px;
   }
 
-  a {
-    position: absolute;
-    left: 0;
-    line-height: 1.4;
-    left: 5px;
-    vertical-align: middle;
-  }
-
   input {
     padding: 0;
-    width: 100%;
-    font-size: 0.84em;
-    padding: 1px 3px;
+    width: 220px;
     border: none;
     color: $text-color;
     outline: $gray-lighter solid 1px;
