Use more named colors

--- a/h/static/styles/mixins/forms.scss
+++ b/h/static/styles/mixins/forms.scss
@@ -45,7 +45,7 @@
   color: $button-text-color;
   text-shadow: 0 1px 0 #FFF;
   border-radius: 2px;
-  border: 1px solid #ACACAC;
+  border: 1px solid $gray-light;
   padding: 7px 12px 6px;
 }
 
