Remove last dangling variable reference

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -16,7 +16,7 @@ $base-font-size: 14px;
   padding: 0;
   position: absolute;
   background: $white;
-  border: 3px solid $border;
+  border: 3px solid $gray;
   border-radius: 4px;
   z-index: 999;
 
