Fix icon reference on help page

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -152,7 +152,7 @@
     </article>
     <div class="help-page-sidebar">
       <div id="help-1">
-        <p>Show and hide the sidebar using the <i class="h-icon-arrow-back"></i> button</p>
+        <p>Show and hide the sidebar using the <i class="h-icon-chevron-left"></i> button</p>
       </div>
       <div id="help-2"></div>
     </div>
