Fix more icon references

--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -685,7 +685,7 @@
                 </username>
                 <i class="small h-icon-lock ng-hide"></i>
                 <i class="small h-icon-border-color ng-hide"></i>
-                <i class="small h-icon-mode-comment ng-hide"></i>
+                <i class="small h-icon-insert-comment ng-hide"></i>
               </span>
               <fuzzytime class="small pull-right ng-pristine ng-valid">
                 <a target="_blank" href="" title="Friday, August 22 2014 10:07 AM" class="">25 days ago</a>
@@ -745,7 +745,7 @@
                 </username>
                 <i class="small h-icon-lock ng-hide"></i>
                 <i class="small h-icon-border-color ng-hide"></i>
-                <i class="small h-icon-mode-comment ng-hide"></i>
+                <i class="small h-icon-insert-comment ng-hide"></i>
               </span>
               <fuzzytime class="small pull-right ng-pristine ng-valid">
                 <a target="_blank" href="" title="Friday, August 22 2014 10:07 AM" class="">25 days ago</a>
