--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -10,7 +10,7 @@
        >{{vm.annotation.user | persona}}</a>
     <i class="h-icon-lock" ng-show="vm.isPrivate() && !vm.editing"></i>
     <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing"></i>
-    <i class="h-icon-mode-comment" ng-show="vm.isComment()"></i>
+    <i class="h-icon-insert-comment" ng-show="vm.isComment()"></i>
     <span class="annotation-citation"
           ng-if="!vm.embedded"
           ng-show="vm.document.title">
