--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -58,9 +58,9 @@
           with the application:</p>
         <div class="feature-content">
           <section class="feature">
-            <h3 class="feature-heading"><i class="feature-icon h-icon-mode-comment"></i> Notes</h3>
+            <h3 class="feature-heading"><i class="feature-icon h-icon-insert-comment"></i> Notes</h3>
             <div class="feature-content styled-text">
-              <p>Create a <em>note</em> by selecting some text and clicking the <i class="help-icon h-icon-mode-comment"></i> button</p>
+              <p>Create a <em>note</em> by selecting some text and clicking the <i class="help-icon h-icon-insert-comment"></i> button</p>
             </div>
           </section>
           <section class="feature">
