Updated logo to be consistent with website logo.

--- a/h/templates/includes/header.html
+++ b/h/templates/includes/header.html
@@ -1,9 +1,5 @@
 <header class="masthead">
-  <a href="{{ base_url }}">
-    <img height="72" width="72" src="{{ request.static_url('h:static/images/logo.png') }}" />
-  </a>
-  <hgroup>
-    <h1 class="masthead-heading">Hypothes<span class="red">.</span>is</h1>
-    <h2 class="masthead-subheading">The&#160;Internet, peer&#160;reviewed.</h2>
-  </hgroup>
+	<hgroup>
+		<a href="https://hypothes.is" class="masthead-heading">Hypothesis</a>
+    </hgroup>
 </header>
