--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -152,19 +152,12 @@ ol {
   .masthead-heading {
     margin: 0;
     padding-top: 4px;
-  }
-
-  .masthead-subheading {
-    font-size: 1.231em;
-    margin: 0;
-  }
-
-  img {
-    float: left;
-    opacity: .7;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: $gray-light;
 
     &:hover {
-      opacity: 1;
+      color: $gray-dark;
     }
   }
 }
