Update logo, adjust styles to match main website.

--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -33,7 +33,8 @@
 .help-page-heading {
   color: $gray-darker;
   margin-bottom: 1em;
-  font-size: 1.5em;
+  font-weight: 400;
+  font-size: 1.1em;
 }
 
 .help-page-lede {
@@ -131,7 +132,8 @@
 
 .feature-heading {
   color: $gray-darker;
-  font-size: 1.125em;
+  font-size: 1em;
+  font-weight: 400;
   margin-bottom: .555em;
 }
 
