--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -152,9 +152,9 @@ ol {
   .masthead-heading {
     margin: 0;
     padding-top: 4px;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 400;
-    color: $gray-light;
+    color: $gray;
 
     &:hover {
       color: $gray-dark;
@@ -174,7 +174,7 @@ ol {
   }
 
   .masthead-heading {
-    font-size: 20px;
+    font-size: 1.1em;
     line-height: 1em;
   }
 
