--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -87,7 +87,7 @@ $base-font-size: 14px;
 }
 
 .annotator-hl.annotator-hl-selected {
-  background-color: $highlight-color-select;
+  background-color: $highlight-color-third;
 }
 
 // Sidebar
