Hide orphan annotations in the sidebar

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -40,7 +40,7 @@
       ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)"
       ng-mouseleave="focus()"
-      ng-repeat="child in threadRoot.children | orderBy : sort.predicate"
+      ng-repeat="child in threadRoot.children | filter:notOrphan | orderBy : sort.predicate"
       ng-show="shouldShowThread(child) && (count('edit') || count('match') || !threadFilter.active())">
   </li>
 </ul>
