--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block meta %}
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
   <!-- Override app body stylings for just this page -->
   <style type="text/css">
     body {background: #FFF !important;}
