Scroll to login form when clicking sign in link
This fixes an issue that if the login form is already shown but the
iframe is taller than the window and scrolled down so that the form is
out of view, then clicking on Sign in would do nothing. With this fix,
clicking Sign in scrolls the iframe up to the login form.

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -5,7 +5,8 @@
      ng-model="account.tab"
      ng-submit="vm.submit(form[account.tab])">
   <!-- Login -->
-  <form data-title="Sign in"
+  <form id="login-form"
+        data-title="Sign in"
         data-value="login"
         class="form tab-pane"
         name="login"
