--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -1,161 +1,164 @@
-<header class="annotation-header">
-  <!-- Deletion notice -->
-  <span ng-if="!vm.editing && vm.annotation.deleted">Annotation deleted.</span>
+<div id="{{vm.element_created_at}}">
+  <header class="annotation-header">
+    <!-- Deletion notice -->
+    <span ng-if="!vm.editing && vm.annotation.deleted">Annotation deleted.</span>
 
-  <!-- User -->
-  <span ng-if="vm.annotation.user">
-    <a class="annotation-user"
-       target="_blank"
-       ng-href="{{vm.baseURI}}u/{{vm.annotation.user}}"
-       >{{vm.annotation.user | persona}}</a>
-    <i class="h-icon-lock" ng-show="vm.isPrivate() && !vm.editing"></i>
-    <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing"></i>
-    <i class="h-icon-insert-comment" ng-show="vm.isComment()"></i>
-    <span class="annotation-citation"
-          ng-if="!vm.embedded"
-          ng-show="vm.document.title">
-      on &ldquo;<a href="{{vm.document.uri}}" target="_blank"
-                   >{{vm.document.title}}</a>&rdquo;
-      <span class="annotation-citation-domain"
-            ng-show="vm.document.domain != vm.document.title"
-            >({{vm.document.domain}})</span>
-    </span>
-    <!-- Editing controls -->
-    <aside class="pull-right" ng-if="vm.editing">
-      <privacy ng-click="$event.stopPropagation()"
-               ng-if="vm.annotation.permissions && vm.editing && action != 'delete'"
-               ng-model="vm.annotation.permissions"
-               user="{{vm.annotation.user}}"
-               class="dropdown privacy pull-right"
-               name="privacy" />
-    </aside>
-    <!-- / Editing controls -->
-  </span>
-
-  <!-- Timestamp -->
-  <a class="annotation-timestamp small pull-right"
-     target="_blank"
-     title="{{vm.annotation.updated | moment:'LLLL'}}"
-     ng-if="!vm.editing && vm.annotation.updated"
-     ng-href="{{vm.baseURI}}a/{{vm.annotation.id}}"
-     >{{vm.timestamp}}</a>
-</header>
-
-<!-- Excerpts -->
-<section class="annotation-section"
-         ng-repeat="target in vm.annotation.target track by $index">
-  <blockquote class="annotation-quote"
-              ng-hide="target.diffHTML && vm.showDiff"
-              ng-bind-html="selector.exact"
-              ng-repeat="selector in target.selector
-                         | filter : {'type': 'TextQuoteSelector'}
-                         track by $index"></blockquote>
-  <blockquote class="annotation-quote"
-              ng-bind-html="target.diffHTML"
-              ng-show="target.diffHTML && vm.showDiff"></blockquote>
-  <div class="small show-differences"
-       ng-show="vm.hasDiff">
-    <input type="checkbox"
-           ng-model="vm.showDiff"
-           ng-click="$event.stopPropagation()"> Show differences</input>
-  </div>
-</section>
-
-<!-- / Excerpts -- >
-
-<!-- Body -->
-<section name="text"
-         class="annotation-body"
-         ng-model="vm.annotation.text"
-         ng-readonly="!vm.editing"
-         markdown>
-</section>
-<!-- / Body -->
-
-<!-- Tags -->
-<div class="annotation-section form-field" ng-if="vm.editing">
-  <tags-input ng-model="vm.annotation.tags"
-              name="tags"
-              class="tags"
-              placeholder="Add tags…"
-              min-length="1"
-              replace-spaces-with-dashes="false"
-              enable-editing-last-tag="true">
-      <auto-complete source="vm.tagsAutoComplete($query)"
-                     min-length="1"
-                     max-results-to-show="10"></auto-complete>
-  </tags-input>
-</div>
-
-<div class="annotation-section tags tags-read-only"
-     ng-if="vm.annotation.tags.length && !vm.editing">
-  <ul class="tag-list">
-    <li class="tag-item" ng-repeat="tag in vm.annotation.tags">
-      <a href="/stream?q=tag:'{{tag.text|urlencode}}'" target="_blank">{{tag.text}}</a>
-    </li>
-  </ul>
-</div>
-<!-- / Tags -->
-
-<div class="annotation-section form-actions"
-        ng-if="vm.editing"
-        ng-switch="vm.action">
-  <div class="form-actions-buttons form-actions-left">
-    <button ng-switch-when="edit"
-            ng-click="vm.save()"
-            class="btn"><i class="h-icon-check btn-icon"></i> Save</button>
-    <button ng-switch-when="delete"
-            ng-click="vm.save()"
-            class="btn"><i class="h-icon-check btn-icon"></i> Delete</button>
-    <button ng-switch-default
-            ng-click="vm.save()"
-            class="btn"><i class="h-icon-check btn-icon"></i> Save</button>
-    <button class="btn btn-clean"
-            ng-click="vm.revert()"
-            ><i class="h-icon-cancel btn-icon"></i> Cancel</button>
-  </div>
-</div>
-
-<div class="annotation-section annotation-license" ng-if="vm.editing">
-  <a href="http://creativecommons.org/publicdomain/zero/1.0/"
-     title="View more information about the Creative Commons Public Domain license"
-     target="_blank">
-    <i class="h-icon-cc-logo"></i><i class="h-icon-cc-zero"></i>
-    Annotations can be freely reused by anyone for any purpose.
-  </a>
-</div>
-
-<footer class="annotation-footer"
-        ng-if="!vm.editing && vm.annotation.id">
-
-  <div class="annotation-replies">
-    <a class="reply-count small" href=""
-       ng-click="replyCountClick()"
-       ng-pluralize count="replyCount"
-       when="{'0': '', 'one': '1 reply', 'other': '{} replies'}"></a>
-  </div>
-
-  <div class="annotation-actions">
-    <a class="small magicontrol" href="" title="Reply"
-      ng-click="vm.reply()"
-      ><i class="h-icon-reply"></i> Reply</a>
-    <span class="magicontrol share-dialog-wrapper">
-      <a class="small" href="" title="Share" ng-click="share($event)"
-        ><i class="h-icon-share"></i> Share</a>
-      <span class="share-dialog" ng-click="$event.stopPropagation()">
-      <a class="h-icon-share"
-          target="_blank"
-          ng-href="{{vm.annotationURI}}"></a>
-        <input type="text" value="{{vm.annotationURI}}" readonly>
+    <!-- User -->
+    <span ng-if="vm.annotation.user">
+      <a class="annotation-user"
+        target="_blank"
+        ng-href="{{vm.baseURI}}u/{{vm.annotation.user}}"
+        >{{vm.annotation.user | persona}}</a>
+      <i class="h-icon-lock" ng-show="vm.isPrivate() && !vm.editing"></i>
+      <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing"></i>
+      <i class="h-icon-insert-comment" ng-show="vm.isComment()"></i>
+      <span class="annotation-citation"
+            ng-if="!vm.embedded"
+            ng-show="vm.document.title">
+        on &ldquo;<a href="{{vm.document.uri}}" target="_blank"
+                    >{{vm.document.title}}</a>&rdquo;
+        <span class="annotation-citation-domain"
+              ng-show="vm.document.domain != vm.document.title"
+              >({{vm.document.domain}})</span>
       </span>
+      <!-- Editing controls -->
+      <aside class="pull-right" ng-if="vm.editing"
+             scrolltome="{{vm.element_created_at}}">
+        <privacy ng-click="$event.stopPropagation()"
+                ng-if="vm.annotation.permissions && vm.editing && action != 'delete'"
+                ng-model="vm.annotation.permissions"
+                user="{{vm.annotation.user}}"
+                class="dropdown privacy pull-right"
+                name="privacy" />
+      </aside>
+      <!-- / Editing controls -->
     </span>
-    <a class="small magicontrol" href="" title="Edit"
-      ng-show="vm.authorize('update')"
-      ng-click="vm.edit()"
-      ><i class="h-icon-edit"></i> Edit</a>
-    <a class="small magicontrol" href="" title="Delete"
-      ng-show="vm.authorize('delete')"
-      ng-click="vm.delete()"
-      ><i class="h-icon-delete"></i> Delete…</a>
+
+    <!-- Timestamp -->
+    <a class="annotation-timestamp small pull-right"
+      target="_blank"
+      title="{{vm.annotation.updated | moment:'LLLL'}}"
+      ng-if="!vm.editing && vm.annotation.updated"
+      ng-href="{{vm.baseURI}}a/{{vm.annotation.id}}"
+      >{{vm.timestamp}}</a>
+  </header>
+
+  <!-- Excerpts -->
+  <section class="annotation-section"
+          ng-repeat="target in vm.annotation.target track by $index">
+    <blockquote class="annotation-quote"
+                ng-hide="target.diffHTML && vm.showDiff"
+                ng-bind-html="selector.exact"
+                ng-repeat="selector in target.selector
+                          | filter : {'type': 'TextQuoteSelector'}
+                          track by $index"></blockquote>
+    <blockquote class="annotation-quote"
+                ng-bind-html="target.diffHTML"
+                ng-show="target.diffHTML && vm.showDiff"></blockquote>
+    <div class="small show-differences"
+        ng-show="vm.hasDiff">
+      <input type="checkbox"
+            ng-model="vm.showDiff"
+            ng-click="$event.stopPropagation()"> Show differences</input>
+    </div>
+  </section>
+
+  <!-- / Excerpts -- >
+
+  <!-- Body -->
+  <section name="text"
+          class="annotation-body"
+          ng-model="vm.annotation.text"
+          ng-readonly="!vm.editing"
+          markdown>
+  </section>
+  <!-- / Body -->
+
+  <!-- Tags -->
+  <div class="annotation-section form-field" ng-if="vm.editing">
+    <tags-input ng-model="vm.annotation.tags"
+                name="tags"
+                class="tags"
+                placeholder="Add tags…"
+                min-length="1"
+                replace-spaces-with-dashes="false"
+                enable-editing-last-tag="true">
+        <auto-complete source="vm.tagsAutoComplete($query)"
+                      min-length="1"
+                      max-results-to-show="10"></auto-complete>
+    </tags-input>
   </div>
-</footer>
+
+  <div class="annotation-section tags tags-read-only"
+      ng-if="vm.annotation.tags.length && !vm.editing">
+    <ul class="tag-list">
+      <li class="tag-item" ng-repeat="tag in vm.annotation.tags">
+        <a href="/stream?q=tag:'{{tag.text|urlencode}}'" target="_blank">{{tag.text}}</a>
+      </li>
+    </ul>
+  </div>
+  <!-- / Tags -->
+
+  <div class="annotation-section form-actions"
+          ng-if="vm.editing"
+          ng-switch="vm.action">
+    <div class="form-actions-buttons form-actions-left">
+      <button ng-switch-when="edit"
+              ng-click="vm.save()"
+              class="btn"><i class="h-icon-check btn-icon"></i> Save</button>
+      <button ng-switch-when="delete"
+              ng-click="vm.save()"
+              class="btn"><i class="h-icon-check btn-icon"></i> Delete</button>
+      <button ng-switch-default
+              ng-click="vm.save()"
+              class="btn"><i class="h-icon-check btn-icon"></i> Save</button>
+      <button class="btn btn-clean"
+              ng-click="vm.revert()"
+              ><i class="h-icon-cancel btn-icon"></i> Cancel</button>
+    </div>
+  </div>
+
+  <div class="annotation-section annotation-license" ng-if="vm.editing">
+    <a href="http://creativecommons.org/publicdomain/zero/1.0/"
+      title="View more information about the Creative Commons Public Domain license"
+      target="_blank">
+      <i class="h-icon-cc-logo"></i><i class="h-icon-cc-zero"></i>
+      Annotations can be freely reused by anyone for any purpose.
+    </a>
+  </div>
+
+  <footer class="annotation-footer"
+          ng-if="!vm.editing && vm.annotation.id">
+
+    <div class="annotation-replies">
+      <a class="reply-count small" href=""
+        ng-click="replyCountClick()"
+        ng-pluralize count="replyCount"
+        when="{'0': '', 'one': '1 reply', 'other': '{} replies'}"></a>
+    </div>
+
+    <div class="annotation-actions">
+      <a class="small magicontrol" href="" title="Reply"
+        ng-click="vm.reply()"
+        ><i class="h-icon-reply"></i> Reply</a>
+      <span class="magicontrol share-dialog-wrapper">
+        <a class="small" href="" title="Share" ng-click="share($event)"
+          ><i class="h-icon-share"></i> Share</a>
+        <span class="share-dialog" ng-click="$event.stopPropagation()">
+        <a class="h-icon-share"
+            target="_blank"
+            ng-href="{{vm.annotationURI}}"></a>
+          <input type="text" value="{{vm.annotationURI}}" readonly>
+        </span>
+      </span>
+      <a class="small magicontrol" href="" title="Edit"
+        ng-show="vm.authorize('update')"
+        ng-click="vm.edit()"
+        ><i class="h-icon-edit"></i> Edit</a>
+      <a class="small magicontrol" href="" title="Delete"
+        ng-show="vm.authorize('delete')"
+        ng-click="vm.delete()"
+        ><i class="h-icon-delete"></i> Delete…</a>
+    </div>
+  </footer>
+</div>
