--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -4,7 +4,7 @@
     {% block meta %}
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-      <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+      <meta name="viewport" content="width=device-width,initial-scale=1" />
       {% for attrs in meta_attrs -%}
         <meta {% for key, value in attrs.items() %}{{ key }}="{{ value }}" {% endfor %}/>
       {% endfor -%}
