--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -32,7 +32,8 @@
       </ul>
     </span>
   </li>
-  <li class="paper thread"
+  <li id="{{vm.uuid}}"
+      class="paper thread"
       ng-class="{'js-hover': hasFocus(child.message)}"
       deep-count="count"
       thread="child" thread-filter
