Make button icons larger
Partly a reaction to fce1f2c, which made icons overall smaller.

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -257,7 +257,9 @@
 
 // Positions the icon nicely within the button.
 .btn-icon {
-  vertical-align: middle;
+  font-size: 1.4em;
+  margin-right: .25em;
+  vertical-align: top;
 }
 
 // Absolutely positions a message/icon to the left of a button.
