Remove inline style from pattern library
Pattern library should reflect actual usage.

--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -383,7 +383,7 @@
         <div class="form-field">
           <button class="btn js-disabled" type="submit" name="">
             <span class="btn-icon spinner"><span><span></span></span></span>
-            <span style="position: relative; bottom: 3px; left: 1px;">Button Loading</span>
+            Button Loading
           </button>
         </div>
       </div>
