--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -32,8 +32,7 @@
       </ul>
     </span>
   </li>
-  <li id="{{vm.id}}"
-      class="paper thread"
+  <li class="paper thread"
       ng-class="{'js-hover': hasFocus(child.message)}"
       deep-count="count"
       thread="child" thread-filter
