Update pattern library

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -139,7 +139,7 @@
     <button class="small btn-clean"
             ng-click="vm.reply()"
             ><i class="h-icon-reply btn-icon"></i> Reply</button>
-    <span class="magicontrol share-dialog-wrapper">
+    <span class="share-dialog-wrapper">
       <button class="small btn-clean"
               ng-click="share($event)"
               ><i class="h-icon-share btn-icon"></i> Share</button>
