--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -708,18 +708,22 @@
                   </li>
                 </ul>
               </div>
-              <footer class="form-actions">
+              <footer class="annotation-actions">
                 <div class="">
-                  <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
-                  <a class="small magicontrol" title="Edit"><i class="h-icon-edit"></i> Edit</a>
-                  <a class="small magicontrol" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
-                  <div class="share-dialog ng-hide">
-                    <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
-                    <div>
-                      <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly="">
-                    </div>
-                  </div>
+                  <button class="small btn-clean"><i class="h-icon-reply btn-icon"></i> Reply</button>
+                  <span class="share-dialog-wrapper">
+                    <button class="small btn-clean"
+                            ng-click="share($event)"
+                            ><i class="h-icon-share btn-icon"></i> Share</button>
+                    <span class="share-dialog" ng-click="$event.stopPropagation()">
+                      <a class="h-icon-share"
+                         target="_blank"
+                         href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
+                      <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly>
+                    </span>
+                  </span>
+                  <button class="small btn-clean"><i class="h-icon-edit btn-icon"></i> Edit</button>
+                  <button class="small btn-clean"><i class="h-icon-delete btn-icon"></i> Delete…</button>
                 </div>
               </footer>
             </article>
@@ -768,18 +772,22 @@
                   </li>
                 </ul>
               </div>
-              <footer class="form-actions">
+              <footer class="annotation-actions">
                 <div class="">
-                  <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                  <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
-                  <a class="small magicontrol" title="Edit"><i class="h-icon-edit"></i> Edit</a>
-                  <a class="small magicontrol" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
-                  <div class="share-dialog ng-hide">
-                    <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
-                    <div>
-                      <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly="">
-                    </div>
-                  </div>
+                  <button class="small btn-clean"><i class="h-icon-reply btn-icon"></i> Reply</button>
+                  <span class="share-dialog-wrapper">
+                    <button class="small btn-clean"
+                            ng-click="share($event)"
+                            ><i class="h-icon-share btn-icon"></i> Share</button>
+                    <span class="share-dialog" ng-click="$event.stopPropagation()">
+                      <a class="h-icon-share"
+                         target="_blank"
+                         href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
+                      <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly>
+                    </span>
+                  </span>
+                  <button class="small btn-clean"><i class="h-icon-edit btn-icon"></i> Edit</button>
+                  <button class="small btn-clean"><i class="h-icon-delete btn-icon"></i> Delete…</button>
                 </div>
               </footer>
             </article>
@@ -816,18 +824,22 @@
                     </ul>
                   </div>
 
-                  <footer class="form-actions">
+                  <footer class="annotation-actions">
                     <div class="">
-                      <a class="small magicontrol" href="" title="Reply"><i class="h-icon-reply"></i> Reply</a>
-                      <a class="small magicontrol" href="" title="Share"><i class="h-icon-share"></i> Share</a>
-                      <a class="small magicontrol ng-hide" href="" title="Edit"><i class="h-icon-edit"></i> Edit</a>
-                      <a class="small magicontrol ng-hide" href="" title="Delete"><i class="h-icon-delete"></i> Delete…</a>
-                      <div class="share-dialog ng-hide">
-                        <a class="h-icon-share" target="_blank" href="http://localhost:5000/a/a5dDt67oQBSKhgqwGcgLuw"></a>
-                        <div>
-                          <input type="text" value="http://localhost:5000/a/a5dDt67oQBSKhgqwGcgLuw" readonly="">
-                        </div>
-                      </div>
+                      <button class="small btn-clean"><i class="h-icon-reply btn-icon"></i> Reply</button>
+                      <span class="share-dialog-wrapper">
+                        <button class="small btn-clean"
+                                ng-click="share($event)"
+                                ><i class="h-icon-share btn-icon"></i> Share</button>
+                        <span class="share-dialog" ng-click="$event.stopPropagation()">
+                          <a class="h-icon-share"
+                             target="_blank"
+                             href="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g"></a>
+                          <input type="text" value="http://localhost:5000/a/Vh9tTm6UQOuRsrnCvHYb4g" readonly>
+                        </span>
+                      </span>
+                      <button class="small btn-clean"><i class="h-icon-edit btn-icon"></i> Edit</button>
+                      <button class="small btn-clean"><i class="h-icon-delete btn-icon"></i> Delete…</button>
                     </div>
                   </footer>
                 </article>
