Revert "Merge pull request #2086 from hypothesis/2052-scroll-to-sign-in-form-on-clicking-sign-in-link"
This reverts commit ca535b6d8a81af343489120e02326c34f71a3d46, reversing
changes made to 0988bffc2d8c968ff35bea177ac65868796b8563.

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -5,8 +5,7 @@
      ng-model="account.tab"
      ng-submit="vm.submit(form[account.tab])">
   <!-- Login -->
-  <form id="login-form"
-        data-title="Sign in"
+  <form data-title="Sign in"
         data-value="login"
         class="form tab-pane"
         name="login"
