--- a/h/templates/app.html
+++ b/h/templates/app.html
@@ -24,7 +24,7 @@
           <li ng-show="auth.user"><a href="" ng-click="logout()">Sign out</a></li>
         </ul>
       </div>
-      <a class="pull-right" href="#login-form"
+      <a class="pull-right" href=""
          ng-click="login()"
          ng-switch-when="null">Sign in</a>
 
