Use h-icon-close in via dialog.

--- a/h/templates/client/via_dialog.html
+++ b/h/templates/client/via_dialog.html
@@ -1,5 +1,5 @@
 <div id="dialog" class="sheet content">
-	<i class="close h-icon-cancel"
+	<i class="close h-icon-close"
    	   role="button"
        title="Close"
        ng-click="viaLinkVisible = false"></i>
