Address usability issues
- Toolbar always open
- Show anotations changes icon and tooltip when toggled.
- .annotator-h1-focused color darkened

--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -57,7 +57,7 @@ $bucket-bar-width: 22px;
 $highlight-color: rgba(255, 255, 60, 0.3);
 $highlight-color-second: rgba(206, 206, 60, 0.4);
 $highlight-color-third: rgba(192, 192, 49, 0.4);
-$highlight-color-focus: rgb(224, 246, 254);
+$highlight-color-focus: rgba(156, 230, 255, 0.5);
 $score-width: 40px;
 $score-height: $score-width;
 $input-border-radius: 2px;
