--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -35,6 +35,17 @@
     {% endif %}
     {% block styles %}{% endblock %}
 
+    {% if ga_tracking_id %}
+      <!-- Google Analytics -->
+      <script async src='//www.google-analytics.com/analytics.js'></script>
+      <script>
+       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+       ga('create', 'UA-{{ga_tracking_id}}', {{ga_create_options|safe}});
+       ga('send', 'pageview');
+      </script>
+      <!-- End Google Analytics -->
+    {% endif %}
+
     {% if base_url %}
       <base target="_top" href="{{ base_url }}" />
     {% endif %}
