--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -41,7 +41,9 @@
       <script>
        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
        ga('create', 'UA-{{ga_tracking_id}}', {{ga_create_options|safe}});
+       {% if not layout.app -%}
        ga('send', 'pageview');
+       {%- endif -%}
       </script>
       <!-- End Google Analytics -->
     {% endif %}
