Move the up/down buckets up a z-level
This places the up/down navigational buckets on a z-plane with the
toolbar buttons and ensures that the other buckets pass under them
while moving on and off screen.

--- a/h/static/styles/bucket-bar.scss
+++ b/h/static/styles/bucket-bar.scss
@@ -1,3 +1,5 @@
+@import 'base';
+
 .annotator-bucket-bar {
   background: hsla(0, 0, 0, .1);
   cursor: ew-resize;
@@ -58,6 +60,9 @@
   }
 
   &.lower, &.upper {
+    @include smallshadow;
+    z-index: 1;
+
     &:before, &:after {
       left: 50%;
       bottom: 100%;
