No pointer events on the sidebar strip
This is unnecessary and less obvious than the toggle button, which
means it's not worth the egregious fail of preventing interaction
with scrollbars, etc.

--- a/h/static/styles/bucket-bar.scss
+++ b/h/static/styles/bucket-bar.scss
@@ -2,7 +2,7 @@
 
 .annotator-bucket-bar {
   background: hsla(0, 0, 0, .1);
-  cursor: ew-resize;
+  pointer-events: none;
   position: absolute;
   height: 100%;
   width: $bucket-bar-width;
