Restore pointer events to bucket indicators
Oops! That was a mistake. If we disable pointer events on the
ancestor, we need to re-enable them below.

--- a/h/static/styles/bucket-bar.scss
+++ b/h/static/styles/bucket-bar.scss
@@ -15,6 +15,7 @@
   border: solid 1px $gray-lighter;
   border-radius: 2px 4px 4px 2px;
   right: 0;
+  pointer-events: all;
   position: absolute;
   margin-top: -8px;
   line-height: 1;
