Set adder buttons to display inline-block
Close #2175

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -39,6 +39,7 @@ $base-font-size: 14px;
 
   button {
     @include box-shadow(none);
+    display: inline-block;
     font-family: h;
     border: none;
     cursor: pointer;
