Revert "Revert "Merge pull request #2123 from hypothesis/2053-scroll-sidebar-to-new-annotations-2""
This reverts commit ba68d710b84d2a78426fd6c0ed325e8c40cbbca1.

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -32,7 +32,8 @@
       </ul>
     </span>
   </li>
-  <li class="paper thread"
+  <li id="{{vm.id}}"
+      class="paper thread"
       ng-class="{'js-hover': hasFocus(child.message)}"
       deep-count="count"
       thread="child" thread-filter
