Bundle topbar CSS

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -16,6 +16,7 @@ $headings-color: $text-color;
 @import 'styled-text';
 @import 'simple-search';
 @import 'tags-input';
+@import 'topbar';
 @import 'page';
 @import 'help-page';
 
