--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -6,7 +6,7 @@
 .form-field {
   @include pie-clearfix;
   clear: both;
-  margin-bottom: 10px;
+  margin-bottom: .6em;
 }
 
 .form-heading {
@@ -15,12 +15,12 @@
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1.25em;
 
   span {
     position: relative;
     background: white;
-    padding-right: 5px;
+    padding-right: .3em;
     z-index: 1;
   }
 
@@ -51,13 +51,13 @@
 .form-label {
   cursor: pointer;
   font-weight: bold;
-  font-size: 13px;
-  margin-bottom: 5px;
+  font-size: .8em;
+  margin-bottom: .3em;
 }
 
 .form-hint {
-  font-size: 12px;
-  margin-left: 5px;
+  font-size: .75em;
+  margin-left: .3em;
   color: $gray-light;
   -webkit-font-smoothing: antialiased;
 }
@@ -109,7 +109,7 @@
   border-radius: 2px;
 
   .form-error {
-    font-size: 12px;
+    font-size: .75em;
     color: white;
   }
 
@@ -130,17 +130,17 @@
 }
 
 .form-error {
-  font-size: 13px;
+  font-size: .8em;
   line-height: 1.5;
   color: $error-red;
 }
 
 .form-checkbox-item {
-  padding-left: 22px;
+  padding-left: 1.4em;
 
   .form-checkbox, [type=checkbox], [type=radio] {
     float: left;
-    margin-left: -20px;
+    margin-left: -1.25em;
     margin-top: 0.3em;
   }
 
@@ -164,14 +164,14 @@
 
 .form-actions {
   @include pie-clearfix;
-  margin-top: 10px;
+  margin-top: .6em;
 }
 
 .form-actions-message {
-  font-size: .9231em;
+  font-size: .7em;
   line-height: 1.5;
   float: left;
-  margin-top: 7px;
+  margin-top: .4em;
 }
 
 .form-actions-buttons {
@@ -179,7 +179,7 @@
   float: right;
 
   > * {
-    margin-left: 10px;
+    margin-left: .6em;
     &:first-child {
       margin-left: 0;
     }
@@ -281,7 +281,7 @@
   background: $success-green;
   border-radius: 50%;
   color: #FFF;
-  padding: 2px;
+  padding: .15em;
 }
 
 // Handles state transitions from "default" -> "loading" -> "success"
