Distinguish brand color from error color
We don't want our brand to be associated with errors and warnings
by virtue of using the same colors for both.

This clarifies things a bit by choosing a suitable orange red for
the error base.

As an additional touch-up for the colors this adds a function to
do return color "weights" giving color values similar to those in
Google's Material Design color palettes.

--- a/h/static/styles/help-page.scss
+++ b/h/static/styles/help-page.scss
@@ -119,7 +119,7 @@
     left: 0;
     width: 2.125em;
     height: 1.8125em;
-    border: .125em solid $hypothered;
+    border: .125em solid $brand-color;
     border-radius: 50%;
     text-align: center;
     padding-top: .3125em; // 24px == Line height of text.
