--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -102,7 +102,7 @@
 .form-error-list {
   position: relative;
   display: none;
-  background: $hypothered;
+  background: $error-color;
   margin-top: (10 / 13 * 1em);
   padding: (4 / 13 * 1em) (11 / 13 * 1em);
   float: left;
@@ -122,8 +122,8 @@
     width: 0;
     position: absolute;
     pointer-events: none;
-    border-color: rgba($hypothered, 0);
-    border-bottom-color: $hypothered;
+    border-color: rgba($error-color, 0);
+    border-bottom-color: $error-color;
     border-width: 4px;
     margin-left: -4px;
   }
@@ -132,7 +132,7 @@
 .form-error {
   font-size: 13px;
   line-height: 1.5;
-  color: $error-red;
+  color: $error-color;
 }
 
 .form-checkbox-item {
@@ -217,23 +217,23 @@
 }
 
 .btn-danger {
-  @include background(linear-gradient(top, $hypothered, shade($hypothered, 5%)));
+  @include background(linear-gradient(top, $error-color, shade($error-color, 5%)));
   color: white;
-  border-color: shade($hypothered, 15%);
+  border-color: shade($error-color, 15%);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
 
   &:focus, &:hover, &:active, &.js-hover, &.js-focus, &.js-active {
     @include box-shadow(0 1px 0 rgba(0, 0, 0, 0.05));
     color: white;
-    background: #e02b3c;
-    border-color: $hypothered;
+    background: tint($error-color, 5%);
+    border-color: $error-color;
   }
 
   &:active, &.js-active {
     @include box-shadow(inset 0 1px 0 rgba(0, 0, 0, 0.3));
     color: white;
-    background: shade($hypothered, 10%);
-    border-color: shade($hypothered, 30%);
+    background: shade($error-color, 10%);
+    border-color: shade($error-color, 30%);
   }
 }
 
@@ -278,7 +278,7 @@
 
 .btn-message-icon {
   display: inline-block;
-  background: $success-green;
+  background: $success-color;
   border-radius: 50%;
   color: #FFF;
   padding: 2px;
