Update the links on the onboarding / help page

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -113,10 +113,10 @@
         <h2 class="help-page-heading">Resources</h2>
         <div class="styled-text">
           <ul>
-            <li>View the <a href="">product roadmap</a> to check out what we're working on.</li>
+            <li>View the <a href="https://hypothes.is/roadmap/">product roadmap</a> to check out what we're working on.</li>
             <li>Request features, report bugs and meet other users in our <a href="https://groups.google.com/forum/#!forum/hypothesis-forum">discussion forums</a>.</li>
             <li>If you need help please don't hesitate to <a href="mailto:support@hypothes.is">get in touch</a>.</li>
-            <li>Visit <a href="http://hypothes.is/what-is-it/">our website</a> to learn more about the project.</li>
+            <li>Visit <a href="https://hypothes.is/about/">our website</a> to learn more about the project.</li>
             <li>Check out the code on <a href="https://github.com/hypothesis/h">GitHub</a>.</li>
           </ul>
         </div>
@@ -134,10 +134,10 @@
               the issue tracking and wiki tools provided there. Additionally, we manage a
               mailing list which you can subscribe to by sending an email to <a
                 href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#100;&#101;&#x76;&#x2b;&#x73;&#x75;&#x62;&#115;&#99;&#114;&#105;&#98;&#x65;&#x40;&#x6c;&#x69;&#x73;&#116;&#46;&#104;&#121;&#112;&#x6f;&#x74;&#x68;&#x65;&#x73;&#46;&#105;&#115;">&#100;&#101;&#x76;&#x2b;&#x73;&#x75;&#x62;&#115;&#99;&#114;&#105;&#98;&#x65;&#x40;&#x6c;&#x69;&#x73;&#116;&#46;&#104;&#121;&#112;&#x6f;&#x74;&#x68;&#x65;&#x73;&#46;&#105;&#115;</a>
-              (<a href="http://list.hypothes.is/archive/dev">archive</a>).</p>
+              (<a href="https://groups.google.com/a/list.hypothes.is/forum/#!forum/dev">archive</a>).</p>
             <p>Note the <a href="https://github.com/hypothesis/h/wiki">project
                 wiki</a>, including a <a
-                href="http://docs.hypothes.is/roadmap/">roadmap</a>, detailed <a
+                href="https://hypothes.is/roadmap/">roadmap</a>, detailed <a
                 href="https://github.com/hypothesis/h/wiki/_pages">descriptions</a> and <a
                 href="https://github.com/hypothesis/h/wiki/Mockup-index">mockups</a> of
               upcoming features, and <a href="https://github.com/hypothesis/h/issues">current
