Add NIPSA filtering (server side)
 - Add "NIPSA" feature flag
 - Add admin package (under accounts, behind the nipsa feature flag)
 - Add "admins" list in the config direcroy
 - Put "admin" flag to the claim data at authentication
 - Implement nipsa filtering
   - to search api
   - to realtime update
   - to stream load_more

--- a/h/templates/app.html
+++ b/h/templates/app.html
@@ -56,6 +56,9 @@
               {% if feature('notification') %}
                 {{ include_raw("h:templates/client/settings/notifications.html") }}
               {% endif %}
+              {% if feature('admin') %}
+                {{ include_raw("h:templates/client/settings/admin.html") }}
+              {% endif %}
             </div>
           {% endblock %}
         </div>
