Add/use h-icon-link on link to standalone

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -142,10 +142,10 @@
     <span class="share-dialog-wrapper">
       <button class="small btn-clean"
               ng-click="share($event)"
-              ><i class="h-icon-insert-link btn-icon"></i> Link</button>
+              ><i class="h-icon-link btn-icon"></i> Link</button>
       <span class="share-dialog" ng-click="$event.stopPropagation()">
         <a target="_blank"
-           class="h-icon-insert-link"
+           class="h-icon-link"
            ng-href="{{vm.annotationURI}}"
            title="Open in new tab"></a>
         <input type="text" value="{{vm.annotationURI}}" readonly>
