Move app-specific body CSS into app.scss
Overriding properties on the body in the otherwise component-specific
`topbar.scss` is a cause for confusion. This resulted in the styling for
the help page being broken when topbar was bundled into `app.scss`.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -13,6 +13,11 @@ body {
   @extend .noise;
   font-family: $sans-font-family;
   font-weight: 300;
+  font-size: .8em;
+  height: 100%;
+  width: 100%;
+  padding-top: 30px;
+  position: fixed;
 }
 
 #{nest("hgroup", "#{headings()}")} {
@@ -27,8 +32,12 @@ ol {
 }
 
 #wrapper {
+  height: 100%;
   padding: .72em;
   text-align: center;
+  overflow-y: auto;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
 
   @include respond-to(tablets desktops) {
     padding-bottom: 4em;
