Ask for "Username or email address" when logging in

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -18,7 +18,7 @@
     </p>
 
     <div class="form-field">
-      <label class="form-label" for="field-login-username">Username:</label>
+      <label class="form-label" for="field-login-username">Username or email address:</label>
       <input class="form-input" type="text" id="field-login-username"
              name="username" value=""
              ng-model="model.username" ng-minlength="3"
