--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -465,7 +465,7 @@
       <div class="pattern-library-example-content">
         <form class="form" action="" method="">
           <div class="form-field">
-            <label class="form-label" for="">Username:</label>
+            <label class="form-label" for="">Username or email address:</label>
             <input class="form-input" type="text" name="" value="" placeholder="johndoe" />
           </div>
           <div class="form-field">
