Correct an error message

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -26,7 +26,7 @@
       <ul class="form-error-list">
         <li class="form-error"
             ng-show="login.username.$error.required"
-            >Please enter your username.</li>
+            >Please enter your username or email address.</li>
         <li class="form-error"
             ng-show="login.username.$error.minlength"
             >Usernames are at least 3 characters.</li>
