Remove "at least two characters" password form hints
These duplicate the fact that a password needs at least two characters
(if we wanted to change that, we would need to find and change the
number two in multiple places in the UI) and they just tempt people to
choose "aa" for their password. If people are going to try to submit
single-character passwords I'm happy for them to have to submit the form
to find out that it's not allowed.

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -128,9 +128,7 @@
     </div>
 
     <div class="form-field">
-      <label class="form-label" for="field-register-password"
-             >Password:
-        <span class="form-hint">(at least two characters)</span></label>
+      <label class="form-label" for="field-register-password">Password:</label>
       <input id="field-register-password" class="form-input"
              type="password" name="password" value=""
              required autocapitalize="false" autocorrect="false"
@@ -238,9 +236,8 @@
     </div>
 
     <div class="form-field">
-      <label class="form-label" for="field-activate-password"
-             >New password:
-        <span class="form-hint">(at least two characters)</span>
+      <label class="form-label" for="field-activate-password">
+        New password:
       </label>
       <input class="form-input" id="field-activate-password"
              type="password" name="password" value=""
