--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -93,6 +93,9 @@
   <script type="text/ng-template" id="annotation.html">
     {{ include_raw("h:templates/client/annotation.html") }}
   </script>
+  <script type="text/ng-template" id="excerpt.html">
+    {{ include_raw("h:templates/client/excerpt.html") }}
+  </script>
   <script type="text/ng-template" id="group_list.html">
     {{ include_raw("h:templates/client/group_list.html") }}
   </script>
