Visually truncate long bodies and quotes
- Introduce collapsing bodies and quotes which expand when you click more.
- This is done through the new excerpt directive which looks to see if text
is overflowing its container and appends 'More...' and 'Less ^' spans.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -66,12 +66,20 @@
 
 .annotation-quote {
   @include quote;
+  max-height: 2.9em;
+  overflow: hidden;
+
   del {
     background:#ffe6e6;
   }
   ins {
     background:#e6ffe6;
   }
+}
+
+.annotation-body {
+  max-height: 13.5em;
+  overflow: hidden;
 }
 
 .annotation-citation-domain {
