--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -8,8 +8,11 @@
        target="_blank"
        ng-href="{{vm.baseURI}}u/{{vm.annotation.user}}"
        >{{vm.annotation.user | persona}}</a>
-    <i class="h-icon-lock" ng-show="vm.isPrivate() && !vm.editing"></i>
     <i class="h-icon-border-color" ng-show="vm.isHighlight() && !vm.editing" title="This is a highlight. Click 'edit' to add a note or tag."></i>
+    <span ng-show="vm.isPrivate() && !vm.editing"
+          title="This annotation is viewable only to you.">
+      <i class="h-icon-lock"></i> Private
+    </span>
     <span class="annotation-citation"
           ng-if="!vm.embedded"
           ng-show="vm.document.title">
@@ -24,6 +27,7 @@
       <privacy ng-click="$event.stopPropagation()"
                ng-if="vm.annotation.permissions && vm.editing && action != 'delete'"
                ng-model="vm.annotation.permissions"
+               level="vm.privacyLevel"
                user="{{vm.annotation.user}}"
                class="dropdown privacy pull-right"
                name="privacy" />
@@ -95,6 +99,13 @@
   </ul>
 </div>
 <!-- / Tags -->
+
+<div class="annotation-section small" ng-if="vm.editing">
+  <p ng-show="vm.privacyLevel.text == 'Only Me'">
+    <i class="h-icon-lock"></i> This annotation is viewable only to you.</p>
+  <p ng-show="vm.privacyLevel.text == 'Public'">
+    <i class="h-icon-public"></i> This annotation is viewable to everyone.</p>
+</div>
 
 <div class="annotation-section form-actions"
         ng-if="vm.editing"
