More padding on menus.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -183,7 +183,7 @@ html {
     a {
       display: block;
       line-height: 1;
-      padding: .5em;
+      padding: 1em;
       white-space: nowrap;
     }
 
