Make top bar style consistent with toolbar
Harmonize the styles of the buttons in the top bar and the toolbar.

- Match font size of icons at 18px
- Buttons are .btn-clean and have minimum width so icons are square
- Transitions for background color
- Simplify the styles for the top bar, using the newly consistent
  clean top bar button styles instead of specific styles for the
  share button.

--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -1,19 +1,11 @@
 @import "base.scss";
 @import "mixins/icons";
 
-.simple-search {
-  overflow: hidden;
-}
-
 .simple-search-form {
   @include clearfix;
   position: relative;
-  padding: 0 1.5385em;
-  color: $gray-darker;
-}
-
-.simple-search-form * {
-  line-height: inherit;
+  padding: 0 2em;
+  color: $gray-dark;
 }
 
 .simple-search-icon {
@@ -27,7 +19,6 @@
 }
 
 input.simple-search-input {
-  float: left;
   outline: none;
   color: $text-color;
   width: 100%;
